@@ -5,6 +5,8 @@ TODO: maybe implement a default message channel, very much like Erlang
       (which is cool in a lot of important aspects (failures!),
       but very lacking in others (higher level ipc)).
 
+	- majorly improved Coro::Handle's performance with Coro::EV.
+
 4.31 Wed Dec  5 12:32:39 CET 2007
 	- remove warn statement form Coro::Util.
 
